--- a/code-pen-projects/recipe/package.json
+++ b/code-pen-projects/recipe/package.json
@@ -1,18 +1,24 @@
 {
+  "homepage": "https://cindyloppar.github.io/recipe/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^1.1.0",
-    "react": "^16.3.1",
+    "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-dom": "^16.2.0",
+    "react-markdown": "^3.3.0",
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
