added a file and tried to add icons

--- a/code-pen-projects/game-of-life/package.json
+++ b/code-pen-projects/game-of-life/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cindyloppar.github.io/game-of-life/",
+  "homepage": "http://gitname.github.io/game-of-life",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
