--- a/code-pen-projects/roguelike-dungeon-crawler-game/package.json
+++ b/code-pen-projects/roguelike-dungeon-crawler-game/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-keydown": "^1.9.7",
     "react-scripts": "1.1.4"
   },
   "scripts": {
